--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #213547;
 }
 
 body {
@@ -33,6 +33,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #213547;
 }
 
 #app {
@@ -42,30 +43,12 @@ h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-
-
-.read-the-docs {
-  color: #888;
-}
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.2rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -75,6 +58,7 @@ button {
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -91,6 +75,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#textos{
+  font-size: 1.9rem;
+}
+
+#resultado{
+  color: brown;
 }
 
 #nuevaPartida {
